# scp-ftp-tftp

./: .gitignore  CMakeLists.txt  DEVLOG.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
packaging/: generate_icons.py
packaging/linux/: gotikinesis.desktop  postinst  postrm
packaging/macos/: Info.plist.in  build_dmg.sh
packaging/windows/: build_installer.bat  gotikinesis.rc  install.bat  uninstall.bat
scripts/: release.sh
src/: main.cpp  mainwindow.cpp  mainwindow.h  tftpclient.cpp  tftpclient.h  transferengine.cpp  transferengine.h
tests/: docker-compose.yml  mock_tftp_server.h  test_ftp_integration.cpp  test_helpers.h  test_mainwindow.cpp  test_performance.cpp  test_scp_integration.cpp  test_tftp_integration.cpp  test_tftp_packets.cpp  test_tftp_real_integration.cpp  test_transferengine.cpp
tests/docker/: ssh_test_key.pub
